create github pages

--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
 	
 	<div class="container">
 		<h2 class="mbr-title mbr-fonts-style align-center mbr-black display-2">
-			Our Awesome Team
-		</h2>
+			Equipo de trabajo</h2>
 		<div class="row justify-content-center pt-5">
 			<div class="col-sm-6 card-wrap col-lg-4">
 				<div class="image-wrap">
