create github pages

--- a/index.html
+++ b/index.html
@@ -379,8 +379,7 @@
 					<h3 class="mbr-fonts-style mbr-section-title align-center pt-3 display-5">
 						Ricardo Munoz</h3>
 					<h3 class="mbr-fonts-style mbr-role align-center pt-2 display-4">
-						<em>Fish Chef</em>
-					</h3>
+						<em>Coordinador de circuitos y sistemas</em></h3>
 					<div class="py-2 ornament align-center">
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133 20" height="20" width="150" fill="#f9e2af">
 							<g>
@@ -423,9 +422,7 @@
 				<div class="card-bottom pb-3">
 					<h3 class="mbr-fonts-style mbr-section-title align-center pt-3 display-5">
 						Gonzalo Povea</h3>
-					<h3 class="mbr-fonts-style mbr-role align-center pt-2 display-4">
-						<em>Fish Chef</em>
-					</h3>
+					<h3 class="mbr-fonts-style mbr-role align-center pt-2 display-4"><em>Coordinador de programacion</em></h3>
 					<div class="py-2 ornament align-center">
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133 20" height="20" width="150" fill="#f9e2af">
 							<g>
