--- a/page2.html
+++ b/page2.html
@@ -58,7 +58,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                        <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="true">Informacion</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-7" href="#" aria-expanded="false">Contexto</a><a class="text-primary dropdown-item display-7" href="#" aria-expanded="false">Causas y efectos</a><a class="text-primary dropdown-item display-7" href="#" aria-expanded="false">Impacto&nbsp;<br><br></a></div>
+                        <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Informacion</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-7" href="#" aria-expanded="false">Contexto</a><a class="text-primary dropdown-item display-7" href="page3.html#top" aria-expanded="false">Causas y efectos</a><a class="text-primary dropdown-item display-7" href="page2.html" aria-expanded="false">Impacto&nbsp;<br><br></a></div>
                     </li>
                     <li class="nav-item"><a class="nav-link link text-primary display-7" href="https://mobiri.se">
                             Project</a></li>
@@ -212,110 +212,6 @@
         </div>
     </div>
 
-</section>
-
-<section class="progress-bars1 modernm4_progress1 cid-sIo2VVAh4b" id="progress1-1x">
-
-    
-
-    
-
-    <div class="animation__background">
-        <div class="circle1"></div>
-        <div class="circle2"></div>
-        <div class="circle3"></div>
-        <div class="circle4"></div>
-        <div class="circle5"></div>
-        <img src="assets/images/triangle-blue-transp.svg" class="triangle" alt="">
-        <img src="assets/images/quadr.svg" class="quadr" alt="">
-    </div>
-
-
-    <div class="container">
-        <div class="row">
-            <div class="title__block align-center col-lg-12">
-                <h4 class="mbr-section-subtitle mbr-medium mbr-fonts-style display-7">EXPERTIES</h4>
-                <h3 class="mbr-section-title mbr-medium mbr-fonts-style display-2">Skills &amp; Perspectives<br></h3>
-            </div>
-            <div class="col-lg-6 progress__wrap">
-                <div class="progress1">
-                    <div class="title-wrap">
-                        <div class="progressbar-title mbr-fonts-style display-7">
-                        </div>
-                        <div class="progress_value mbr-fonts-style display-7">
-                            <div class="progressbar-number"></div>
-                            <span>%</span>
-
-                        </div>
-                    </div>
-                    <progress class="progress progress-primary" max="100" value="85">
-                    </progress>
-                    <p class="progress__title mbr-medium mbr-fonts-style display-5">
-                        Skill Bar One
-                    </p>
-                    <p class="progress__text mbr-fonts-style display-7">HTML, CSS</p>
-                </div>
-            </div>
-            <div class="col-lg-6 progress__wrap">
-                <div class="progress2">
-                    <div class="title-wrap">
-                        <div class="progressbar-title mbr-fonts-style display-7">
-                        </div>
-                        <div class="progress_value mbr-fonts-style display-7">
-                            <div class="progressbar-number"></div>
-                            <span>%</span>
-
-                        </div>
-                    </div>
-                    <progress class="progress progress-primary" max="100" value="85">
-                    </progress>
-                    <p class="progress__title mbr-medium mbr-fonts-style display-5">
-                        Skill Bar Two
-                    </p>
-                    <p class="progress__text mbr-fonts-style display-4">JAVASCRIPT</p>
-                </div>
-            </div>
-
-            <div class="col-lg-6 progress__wrap">
-                <div class="progress3">
-                    <div class="title-wrap">
-                        <div class="progressbar-title mbr-fonts-style display-7">
-                        </div>
-                        <div class="progress_value mbr-fonts-style display-7">
-                            <div class="progressbar-number"></div>
-                            <span>%</span>
-
-                        </div>
-                    </div>
-                    <progress class="progress progress-primary" max="100" value="85">
-                    </progress>
-                    <p class="progress__title mbr-medium mbr-fonts-style display-5">
-                        Skill Bar Three
-                    </p>
-                    <p class="progress__text mbr-fonts-style display-4">PHOTOSHOP, ILLASTRATOR</p>
-                </div>
-            </div>
-            <div class="col-lg-6 progress__wrap">
-                <div class="progress4">
-                    <div class="title-wrap">
-                        <div class="progressbar-title mbr-fonts-style display-7">
-                        </div>
-                        <div class="progress_value mbr-fonts-style display-7">
-                            <div class="progressbar-number"></div>
-                            <span>%</span>
-
-                        </div>
-                    </div>
-                    <progress class="progress progress-primary" max="100" value="85">
-                    </progress>
-                    <p class="progress__title mbr-medium mbr-fonts-style display-5">
-                        Skill Bar Four
-                    </p>
-                    <p class="progress__text mbr-fonts-style display-4">PHP, MySQL</p>
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
 
 
