--- a/page2.html
+++ b/page2.html
@@ -41,7 +41,7 @@
             <div class="navbar-brand">
                 <div class="col-lg-auto padd_lr_0">
                     <span class="navbar-logo">
-                        <a href="https://mobiri.se">
+                        <a href="index.html#header5-1">
                             <img src="assets/images/logo-oficial-172x229.jpg" alt="Mobirise" title="" style="height: 115px;">
                         </a>
                     </span>
@@ -58,7 +58,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                        <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Informacion</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-7" href="#" aria-expanded="false">Contexto</a><a class="text-primary dropdown-item display-7" href="page3.html#top" aria-expanded="false">Causas y efectos</a><a class="text-primary dropdown-item display-7" href="page2.html" aria-expanded="false">Impacto&nbsp;<br><br></a></div>
+                        <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Informacion</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-7" href="page3.html#extHeader2-1b" aria-expanded="false">Contexto</a><a class="text-primary dropdown-item display-7" href="page3.html#top" aria-expanded="false">Causas y efectos</a><a class="text-primary dropdown-item display-7" href="page2.html" aria-expanded="false">Impacto&nbsp;<br><br></a></div>
                     </li>
                     <li class="nav-item"><a class="nav-link link text-primary display-7" href="https://mobiri.se">
                             Project</a></li>
