--- a/page7.html
+++ b/page7.html
@@ -41,10 +41,10 @@
                 <div class="col-lg-auto padd_lr_0">
                     <span class="navbar-logo">
                         <a href="index.html#header5-1">
-                            <img src="assets/images/logo-oficial-172x229.jpg" alt="Mobirise" title="" style="height: 115px;">
+                            <img src="assets/images/logo-oficial-172x229.jpg" alt="Mobirise" title="" style="height: 110px;">
                         </a>
                     </span>
-                    
+                    <span class="navbar-caption-wrap"><a class="navbar-caption mbr-bold text-primary display-7" href="index.html#header5-1">Bioshock</a></span>
                 </div>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,11 +56,10 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                        <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Informacion</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-7" href="page3.html#extHeader2-1b" aria-expanded="false">Contexto</a><a class="text-primary dropdown-item display-7" href="page3.html#top" aria-expanded="false">Causas y efectos</a><a class="text-primary dropdown-item display-7" href="page2.html" aria-expanded="false">Impacto&nbsp;<br><br></a></div>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown open">
+                        <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="true">Informacion</a><div class="dropdown-menu"><div class="dropdown"><a class="text-primary dropdown-item dropdown-toggle display-7" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Antecedentes<br></a><div class="dropdown-menu dropdown-submenu"><a class="text-primary dropdown-item display-7" href="page3.html#header4-1g" aria-expanded="false">Epilepsia</a><a class="text-primary dropdown-item display-7" href="page3.html#progress2-43" aria-expanded="false">Epilepsia refractaria</a><a class="text-primary dropdown-item display-7" href="page3.html#content2-47" aria-expanded="false">Convulsiones</a><a class="text-primary dropdown-item display-7" href="page3.html#image1-45" aria-expanded="false">Causas y efectos</a></div></div><a class="text-primary dropdown-item display-7" href="page9.html#header5-4l" aria-expanded="false">Contexto</a><a class="text-primary dropdown-item display-7" href="page2.html#header4-1w" aria-expanded="false">Impacto<br></a></div>
                     </li>
-                    <li class="nav-item"><a class="nav-link link text-primary display-7" href="https://mobiri.se">
-                            Project</a></li>
+                    <li class="nav-item"><a class="nav-link link text-primary display-7" href="page8.html#extHeader3-4f">Equipo de trabajo</a></li>
                     <li class="nav-item">
                         <a class="nav-link link text-primary display-7" href="https://mobiri.se">
                             Páginas</a>
@@ -89,7 +88,7 @@
                         </a>
                     </div>
 
-                    
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="#"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>Buy ModernM4</a></div>
                 </div>
             </div>
         </div>
