--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </li>
                     <li class="nav-item"><a class="nav-link link text-primary display-7" href="page8.html#extHeader3-4f">Equipo de trabajo</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="true">Problemática</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-7" href="page10.html#header4-7n">Defición de la problematica<br></a></div>
+                        <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Problemática</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-7" href="page10.html#header4-7n">Defición de la problematica<br></a></div>
                     </li></ul>
                 <div class="widget">
 
