--- a/page2.html
+++ b/page2.html
@@ -62,8 +62,8 @@
                         <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Informacion</a><div class="dropdown-menu"><div class="dropdown"><a class="text-primary dropdown-item dropdown-toggle display-7" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Antecedentes<br></a><div class="dropdown-menu dropdown-submenu"><a class="text-primary dropdown-item display-7" href="page3.html#header4-1g" aria-expanded="false">Epilepsia</a><a class="text-primary dropdown-item display-7" href="page3.html#progress2-43" aria-expanded="false">Epilepsia refractaria</a><a class="text-primary dropdown-item display-7" href="page3.html#content2-47" aria-expanded="false">Convulsiones</a><a class="text-primary dropdown-item display-7" href="page3.html#image1-45" aria-expanded="false">Causas y efectos</a></div></div><a class="text-primary dropdown-item display-7" href="page9.html#header5-4l" aria-expanded="false">Contexto</a><a class="text-primary dropdown-item display-7" href="page2.html#header4-1w" aria-expanded="false">Impacto<br></a></div>
                     </li>
                     <li class="nav-item"><a class="nav-link link text-primary display-7" href="page8.html#extHeader3-4f">Equipo de trabajo</a></li>
-                    <li class="nav-item dropdown open">
-                        <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="true">Problemática</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-7" href="page10.html#header4-7n">Defición de la problematica<br></a></div>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Problemática</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-7" href="page10.html#header4-7n">Defición de la problematica<br></a></div>
                     </li></ul>
                 <div class="widget">
 
@@ -102,7 +102,7 @@
 	</svg>
 </section>
 
-<section class="content01 photom4_content01 cid-sJwbtnBdj6" id="content01-7i">
+<section class="content01 photom4_content01 cid-sJxqbeKhGi" id="content01-7x">
 
 	
 
@@ -117,7 +117,7 @@
 						Prevalencia</h1>
 					
 					<div class="mbr-section-text mbr-white pb-3 ">
-						<p class="mbr-text align-right align-right mbr-fonts-style display-7"></p><div style="text-align: justify;"><span style="font-size: 1.4rem;">Si bien la prevalencia en los países del hemisferio norte está entre 5-6 por cada 1000 personas, en Latino América es más alta. En el Perú, se estima que la prevalencia de epilepsia es de 11,9-32,1 por cada 1000 personas.</span></div><div style="text-align: justify;"><span style="font-size: 1.4rem;">La mayor parte de pacientes con epilepsia responde al tratamiento con fármacos antiepilépticos (FAEs), sin embargo, alrededor de un 30% presentan una situación contraria. En estos casos se debe considerar como tratamiento, la cirugía de epilepsia[1].</span></div><br><p></p>
+						<p class="mbr-text align-right align-right mbr-fonts-style display-7"></p><div style="text-align: justify;"><span style="font-size: 1.4rem;">Si bien la prevalencia en los países del hemisferio norte está entre 5-6 por cada 1000 personas, en Latino América es más alta. En el Perú, se estima que la prevalencia de epilepsia es de 11,9-32,1 por cada 1000 personas.</span></div><div style="text-align: justify;"><span style="font-size: 1.4rem;">La mayor parte de pacientes con epilepsia responde al tratamiento con fármacos antiepilépticos (FAEs), sin embargo, alrededor de un 30% presentan una situación contraria. En estos casos se debe considerar como tratamiento, la cirugía de epilepsia[1].</span></div><p></p>
 					</div>
 					
 				</div>
@@ -288,15 +288,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-lg-4 first col-12">
-                <div class="block"> <img src="assets/images/ilustracion-sin-titulo-2-761x1015.png" alt="Mobirise"></div>
+                <div class="block"> <a href="page7.html#image1-35" target="_blank"><img src="assets/images/ilustracion-sin-titulo-2-761x1015.png" alt="Mobirise"></a></div>
             </div>
 
             <div class="col-md-4 col-lg-4 col-12">
-                <div class="block"><img src="assets/images/ilustracion-sin-titulo-1-761x1015.png" alt="Mobirise"> </div>
+                <div class="block"><a href="page5.html#image1-2x" target="_blank"><img src="assets/images/ilustracion-sin-titulo-1-761x1015.png" alt="Mobirise"></a> </div>
             </div>
 
             <div class="col-md-4 col-lg-4 last col-12">
-                <div class="block"> <img src="assets/images/ilustracion-sin-titulo-1-761x1015.png" alt="Mobirise"></div>
+                <div class="block"> <a href="page6.html#image1-32" target="_blank"><img src="assets/images/ilustracion-sin-titulo-1-761x1015.png" alt="Mobirise"></a></div>
             </div>
 
         </div>
