--- a/page8.html
+++ b/page8.html
@@ -61,8 +61,8 @@
                         <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Informacion</a><div class="dropdown-menu"><div class="dropdown"><a class="text-primary dropdown-item dropdown-toggle display-7" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Antecedentes<br></a><div class="dropdown-menu dropdown-submenu"><a class="text-primary dropdown-item display-7" href="page3.html#header4-1g" aria-expanded="false">Epilepsia</a><a class="text-primary dropdown-item display-7" href="page3.html#progress2-43" aria-expanded="false">Epilepsia refractaria</a><a class="text-primary dropdown-item display-7" href="page3.html#content2-47" aria-expanded="false">Convulsiones</a><a class="text-primary dropdown-item display-7" href="page3.html#image1-45" aria-expanded="false">Causas y efectos</a></div></div><a class="text-primary dropdown-item display-7" href="page9.html#header5-4l" aria-expanded="false">Contexto</a><a class="text-primary dropdown-item display-7" href="page2.html#header4-1w" aria-expanded="false">Impacto<br></a></div>
                     </li>
                     <li class="nav-item"><a class="nav-link link text-primary display-7" href="page8.html#extHeader3-4f">Equipo de trabajo</a></li>
-                    <li class="nav-item dropdown open">
-                        <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="true">Problemática</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-7" href="page10.html#header4-7n">Defición de la problematica<br></a></div>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link link text-primary dropdown-toggle display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Problemática</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-7" href="page10.html#header4-7n">Defición de la problematica<br></a></div>
                     </li></ul>
                 <div class="widget">
 
